# HexAutomata

./: .copier-answers.hexdoc-hexcasting.yml  README.md  TODOs.md  build.gradle  gradle.properties  pyproject.toml
.github/workflows/: build_docs.yml
codegen/: config.yaml  data.yaml  gen_config.py  gen_jsons.py  gen_models.py  img_color_shift.py  patterns.yaml
codegen/templates/: common.java  fabric.java  forge.java
collector/: config.json  uploader.py
common/src/main/resources/: hexautomata.mixins.json
doc/: README.md  hexdoc.toml  logo.psd  nodemon.json
doc/resources/assets/hexautomata/lang/: en_us.flatten.json5
doc/src/hexdoc_hexautomata/: _hooks.py
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/0.1/: index.html
docs/v/0.1.1/: index.html
docs/v/0.1.1/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.1.1/1.0/en_us/basics/: index.html
docs/v/0.1.1/1.0/en_us/casting/: index.html
docs/v/0.1.1/1.0/en_us/greatwork/: index.html
docs/v/0.1.1/1.0/en_us/interop/: index.html
docs/v/0.1.1/1.0/en_us/items/: index.html
docs/v/0.1.1/1.0/en_us/lore/: index.html
docs/v/0.1.1/1.0/en_us/patterns/: index.html
docs/v/0.1.1/1.0/en_us/reactive_focus/: index.html
docs/v/0.1.1/1.0/en_us/reactive_focus_patterns/: index.html
docs/v/0.1.1/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.1.1/1.0/zh_cn/basics/: index.html
docs/v/0.1.1/1.0/zh_cn/casting/: index.html
docs/v/0.1.1/1.0/zh_cn/greatwork/: index.html
docs/v/0.1.1/1.0/zh_cn/items/: index.html
docs/v/0.1.1/zh_cn/: index.html
docs/v/0.1.2/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.1.2/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.1.2/en_us/: index.html
docs/v/0.1.2/zh_cn/: index.html
docs/v/0.1/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.1/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.1/zh_cn/: index.html
docs/v/0.2.0/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.0/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.0/en_us/: index.html
docs/v/0.2.0/zh_cn/: index.html
docs/v/0.2.1/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.1/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.1/en_us/: index.html
docs/v/0.2.1/zh_cn/: index.html
docs/v/0.2.3/: index.html
docs/v/0.2.3/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.3/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.2.3/zh_cn/: index.html
docs/v/0.3.0/: index.html
docs/v/0.3.0/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.3.0/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/0.3.0/zh_cn/: index.html
docs/v/0.3.1/: index.html
docs/v/0.3.1/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.3.1/1.0/zh_cn/: .sitemap-marker.json  index.html  index.js  textures.css
docs/v/0.3.1/zh_cn/: index.html
docs/v/latest/main/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/latest/main/zh_cn/: .sitemap-marker.json  index.html  index.js
fabric/: build.gradle
fabric/src/main/resources/: fabric.mod.json  hexautomata.mixins.fabric.json
forge/: build.gradle
forge/src/main/resources/: pack.mcmeta
(+393 files in other folders)
